<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.mapas.ServeiActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="451dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="50dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:translationY="10px" />

        <EditText
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_max_int"
            android:translationY="20px" />

        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity_int"
            android:translationY="20px" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:translationY="20px" />

        <Button
            android:id="@+id/btn_busca_servei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_services"
            android:translationY="20px" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:translationY="50px"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>