<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_claro"
    android:orientation="vertical"
    tools:context=".Registro">
    <Space
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:rotation="90" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"

        android:layout_marginRight="15dp"

        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"

        android:layout_marginRight="15dp"

        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"

        android:layout_marginRight="15dp"

        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Direccio"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"

        android:layout_marginRight="15dp"

        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editTextTextPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"

        android:hint="@string/password"

        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"

        android:hint="@string/RepeteixPassword"

        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|bottom"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"

            android:layout_marginRight="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_style"
            android:text="@string/Registre" />
    </LinearLayout>




</LinearLayout>