<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:translationY="10px" />
        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:translationY="10px" />
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/icon"
            android:translationY="10px" />
        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:translationY="10px" />
        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:translationY="10px" />
        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_km"
            android:translationY="10px" />
        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Photo:"
            android:translationY="10px" />
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/Space"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text=""
            android:translationY="10px" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>