<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="486dp" />

        <Button
            android:id="@+id/buttonEditProfile"
            android:layout_width="120dp"
            android:layout_marginStart="146dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile" />
        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="120dp"
            android:layout_marginStart="146dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />
        <Button
            android:id="@+id/buttonBaixa"
            android:layout_width="120dp"
            android:layout_marginStart="146dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/DonarsedeBaixa" />


    </LinearLayout>

</FrameLayout>