<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_claro"
    android:orientation="vertical"
    tools:context="com.app.login.EditProfile">

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotation="90" />

    <EditText
        android:id="@+id/editTextCarrer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/carrer"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/SpinnerSang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextCiutat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"

        android:layout_marginRight="15dp"

        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/ciutat"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextCP"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/codi_postal"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/SpinnerCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edt_style"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextPais"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"

        android:layout_marginRight="15dp"

        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/pais"
        android:inputType="textPersonName" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|bottom"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"

            android:layout_marginRight="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_style"
            android:text="@string/actualizar" />
    </LinearLayout>


</LinearLayout>